// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableToolbar > renders correctly when all the item are displayed 1`] = `
"<header data-v-91e2c1b3="" class="v-toolbar v-toolbar--flat v-toolbar--density-default v-theme--light v-locale--is-ltr sy-table-toolbar px-4 py-2 d-flex flex-wrap align-center justify-space-between" style="background-color: #FFFFFF; color: #000; caret-color: #000;" minheight="56px">
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p data-v-91e2c1b3="" class="mb-0 font-weight-bold mr-4 my-3" data-test-id="nb-rows">5/5 lignes</p>
    <div data-v-91e2c1b3="" class="sy-table-toolbar__search">
      <div data-v-91e2c1b3="" class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-input--plain-underlined sy-form-input flex-grow-1" data-test-id="search-input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--appended v-field--single-line v-field--variant-underlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer bg-primary" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-v-0">
                <!---->Rechercher
              </label>
              <!----><input size="1" type="text" id="input-v-0" aria-describedby="input-v-0-messages" class="v-field__input">
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!--v-if-->
    </div>
    <!---->
  </div>
  <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
    <!---->
  </transition-stub>
</header>"
`;

exports[`TableToolbar > renders correctly when loading 1`] = `
"<header data-v-91e2c1b3="" class="v-toolbar v-toolbar--flat v-toolbar--density-default v-theme--light v-locale--is-ltr sy-table-toolbar px-4 py-2 d-flex flex-wrap align-center justify-space-between" style="background-color: #FFFFFF; color: #000; caret-color: #000;" minheight="56px">
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p data-v-91e2c1b3="" class="mb-0 font-weight-bold mr-4 my-3" data-test-id="nb-rows">1 ligne</p>
    <div data-v-91e2c1b3="" class="sy-table-toolbar__search">
      <div data-v-91e2c1b3="" class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-input--disabled v-text-field v-input--plain-underlined sy-form-input flex-grow-1 loading" data-test-id="search-input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--appended v-field--disabled v-field--single-line v-field--variant-underlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer bg-primary" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-v-0">
                <!---->Rechercher
              </label>
              <!----><input disabled="" size="1" type="text" id="input-v-0" aria-describedby="input-v-0-messages" class="v-field__input">
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!--v-if-->
    </div>
    <!---->
  </div>
  <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
    <!---->
  </transition-stub>
</header>"
`;

exports[`TableToolbar > renders correctly when the screen width <= 600px 1`] = `
"<header data-v-91e2c1b3="" class="v-toolbar v-toolbar--flat v-toolbar--density-default v-theme--light v-locale--is-ltr sy-table-toolbar px-4 py-2 d-flex flex-wrap align-center justify-space-between" style="background-color: #FFFFFF; color: #000; caret-color: #000;" minheight="56px">
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p data-v-91e2c1b3="" class="mb-0 font-weight-bold mr-4 my-3" data-test-id="nb-rows">1 ligne</p>
    <div data-v-91e2c1b3="" class="sy-table-toolbar__search">
      <div data-v-91e2c1b3="" class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-input--plain-underlined sy-form-input flex-grow-1" data-test-id="search-input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--appended v-field--single-line v-field--variant-underlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer bg-primary" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-v-0">
                <!---->Rechercher
              </label>
              <!----><input size="1" type="text" id="input-v-0" aria-describedby="input-v-0-messages" class="v-field__input">
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!--v-if-->
    </div>
    <!---->
  </div>
  <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
    <!---->
  </transition-stub>
</header>"
`;

exports[`TableToolbar > renders correctly with content slot 1`] = `
"<header data-v-91e2c1b3="" class="v-toolbar v-toolbar--flat v-toolbar--density-default v-theme--light v-locale--is-ltr sy-table-toolbar px-4 py-2 d-flex flex-wrap align-center justify-space-between" style="background-color: #FFFFFF; color: #000; caret-color: #000;" minheight="56px">
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p data-v-91e2c1b3="" class="mb-0 font-weight-bold mr-4 my-3" data-test-id="nb-rows">1 ligne</p>
    <div data-v-91e2c1b3="" class="sy-table-toolbar__search">
      <div data-v-91e2c1b3="" class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-input--plain-underlined sy-form-input flex-grow-1" data-test-id="search-input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--appended v-field--single-line v-field--variant-underlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer bg-primary" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-v-0">
                <!---->Rechercher
              </label>
              <!----><input size="1" type="text" id="input-v-0" aria-describedby="input-v-0-messages" class="v-field__input">
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!--v-if-->
    </div>
    <!---->
  </div>
  <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
    <!---->
  </transition-stub>
</header>"
`;

exports[`TableToolbar > renders correctly with no items 1`] = `
"<header data-v-91e2c1b3="" class="v-toolbar v-toolbar--flat v-toolbar--density-default v-theme--light v-locale--is-ltr sy-table-toolbar px-4 py-2 d-flex flex-wrap align-center justify-space-between" style="background-color: #FFFFFF; color: #000; caret-color: #000;" minheight="56px">
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <!--v-if-->
    <div data-v-91e2c1b3="" class="sy-table-toolbar__search">
      <div data-v-91e2c1b3="" class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-input--plain-underlined sy-form-input flex-grow-1" data-test-id="search-input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--appended v-field--single-line v-field--variant-underlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer bg-primary" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-v-0">
                <!---->Rechercher
              </label>
              <!----><input size="1" type="text" id="input-v-0" aria-describedby="input-v-0-messages" class="v-field__input">
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!--v-if-->
    </div>
    <!---->
  </div>
  <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
    <!---->
  </transition-stub>
</header>"
`;

exports[`TableToolbar > should render 1`] = `
"<header data-v-91e2c1b3="" class="v-toolbar v-toolbar--flat v-toolbar--density-default v-theme--light v-locale--is-ltr sy-table-toolbar px-4 py-2 d-flex flex-wrap align-center justify-space-between" style="background-color: #FFFFFF; color: #000; caret-color: #000;" minheight="56px" showaddbtn="true">
  <!---->
  <div class="v-toolbar__content">
    <!---->
    <!---->
    <p data-v-91e2c1b3="" class="mb-0 font-weight-bold mr-4 my-3" data-test-id="nb-rows">1/2 lignes</p>
    <div data-v-91e2c1b3="" class="sy-table-toolbar__search">
      <div data-v-91e2c1b3="" class="v-input v-input--horizontal v-input--density-compact v-theme--light v-locale--is-ltr v-text-field v-input--plain-underlined sy-form-input flex-grow-1" data-test-id="search-input">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--appended v-field--single-line v-field--variant-underlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary" style="opacity: NaN;"></div>
                <div class="v-progress-linear__buffer bg-primary" style="opacity: NaN; width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-v-0">
                <!---->Rechercher
              </label>
              <!----><input size="1" type="text" id="input-v-0" aria-describedby="input-v-0-messages" class="v-field__input">
              <!---->
            </div>
            <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
              <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
            </transition-stub>
            <div class="v-field__append-inner">
              <!----><i class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
            </div>
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <!--v-if-->
    </div>
    <!---->
  </div>
  <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
    <!---->
  </transition-stub>
</header>"
`;
